[metadata]
name = tayph
author = Jens Hoeijmakers
author_email = jens.hoeijmakers@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/Hoeijmakers/tayph.git
description = High Resolution Spectroscopy of Exoplanets
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = https://github.com/Hoeijmakers/tayph.git

[options]
zip_safe = False
packages = find:
python_requires = >=3.5
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy
    lmfit
    scipy
    matplotlib

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
tayph = data/*

[tool:pytest]
testpaths = "tayph" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    tayph/_astropy_init*
    tayph/conftest.py
    tayph/*setup_package*
    tayph/tests/*
    tayph/*/tests/*
    tayph/extern/*
    tayph/version*
    */tayph/_astropy_init*
    */tayph/conftest.py
    */tayph/*setup_package*
    */tayph/tests/*
    */tayph/*/tests/*
    */tayph/extern/*
    */tayph/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
